// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navbar render admin link for admins 1`] = `
.c9 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c9:hover {
  opacity: 0.90;
}

.c9:focus {
  outline: none;
}

.c9:active {
  opacity: 0.80;
}

.c9:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c10 {
  background-color: transparent;
  border: 1px solid;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  opacity: 0.90;
}

.c2 {
  cursor: pointer;
}

.c0 {
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 100px [content] 1fr;
  grid-gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 1;
}

.c4 {
  grid-column: content;
  display: grid;
  grid-template-columns: [menu] 1fr [new-agent] 250px [logout] 100px [settings] 50px;
  grid-gap: 12px;
  height: auto;
}

.c3 {
  grid-row: logo;
  grid-column: toggle;
  display: none;
  position: relative;
  width: 32px;
  height: 32px;
  line-height: 32px;
  text-align: center;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform .3s ease-out;
  -webkit-transition: transform .3s ease-out;
  transition: transform .3s ease-out;
}

.c3:hover {
  cursor: pointer;
}

.c7 {
  margin: 0px 16px;
  float: left;
}

.c5 {
  grid-column: menu;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  grid-column: logo;
}

.c11 {
  grid-column: logout;
  float: right;
  max-width: 100px;
}

.c12 {
  grid-column: settings;
  line-height: 50px;
  margin: 0 auto;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.c12:hover {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
  cursor: pointer;
}

.c8 {
  display: none;
}

@media (max-width:47.9375em) {
  .c0 {
    grid-template-columns: [main] 1fr [toggle] 24px;
    grid-template-rows: [logo] 50px [content] 1fr;
    position: static;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: auto;
  }
}

@media (max-width:47.9375em) {
  .c4 {
    display: none;
    grid-column: main / -1;
    grid-row: content;
    height: 100%;
    grid-template-columns: [main] 1fr;
    grid-template-rows: [menu] 1fr [new-agent] 50px [logout] 50px;
  }
}

@media (max-width:47.9375em) {
  .c3 {
    display: inline;
  }
}

@media (max-width:47.9375em) {
  .c7 {
    width: 100%;
    margin-bottom: 32px;
  }
}

@media (max-width:47.9375em) {
  .c5 {
    -webkit-align-self: start;
    -ms-flex-item-align: start;
    align-self: start;
    grid-column: main;
    grid-row: menu;
    margin-top: 32px;
  }
}

@media (max-width:47.9375em) {
  .c1 {
    grid-column: main;
    grid-row: logo;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    grid-column: main;
    grid-row: logout;
    max-width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c12 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c8 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <i
    className="c2 c3 fa fa-bars fa-lg"
    id="collapseIcon"
    onClick={[Function]}
  />
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <a
        className="c6 c7"
        href="/"
        onClick={[Function]}
      >
        Dashboard
      </a>
      <a
        className="c6 c7"
        href="/admin"
        onClick={[Function]}
      >
        Admin
      </a>
      <a
        className="c6 c7 c8"
        href="/settings/user_settings"
        onClick={[Function]}
      >
        Settings
      </a>
    </div>
    <button
      className="c9 c10 c11"
      id="logoutButton"
      onClick={[Function]}
    >
      Logout
    </button>
    <a
      className="c6 c12 fas fa-cog fa-lg"
      href="/settings/user_settings"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`navbar renders correctly 1`] = `
.c9 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c9:hover {
  opacity: 0.90;
}

.c9:focus {
  outline: none;
}

.c9:active {
  opacity: 0.80;
}

.c9:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c10 {
  background-color: transparent;
  border: 1px solid;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  opacity: 0.90;
}

.c2 {
  cursor: pointer;
}

.c0 {
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 100px [content] 1fr;
  grid-gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 1;
}

.c4 {
  grid-column: content;
  display: grid;
  grid-template-columns: [menu] 1fr [new-agent] 250px [logout] 100px [settings] 50px;
  grid-gap: 12px;
  height: auto;
}

.c3 {
  grid-row: logo;
  grid-column: toggle;
  display: none;
  position: relative;
  width: 32px;
  height: 32px;
  line-height: 32px;
  text-align: center;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform .3s ease-out;
  -webkit-transition: transform .3s ease-out;
  transition: transform .3s ease-out;
}

.c3:hover {
  cursor: pointer;
}

.c7 {
  margin: 0px 16px;
  float: left;
}

.c5 {
  grid-column: menu;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  grid-column: logo;
}

.c11 {
  grid-column: logout;
  float: right;
  max-width: 100px;
}

.c12 {
  grid-column: settings;
  line-height: 50px;
  margin: 0 auto;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.c12:hover {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
  cursor: pointer;
}

.c8 {
  display: none;
}

@media (max-width:47.9375em) {
  .c0 {
    grid-template-columns: [main] 1fr [toggle] 24px;
    grid-template-rows: [logo] 50px [content] 1fr;
    position: static;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: auto;
  }
}

@media (max-width:47.9375em) {
  .c4 {
    display: none;
    grid-column: main / -1;
    grid-row: content;
    height: 100%;
    grid-template-columns: [main] 1fr;
    grid-template-rows: [menu] 1fr [new-agent] 50px [logout] 50px;
  }
}

@media (max-width:47.9375em) {
  .c3 {
    display: inline;
  }
}

@media (max-width:47.9375em) {
  .c7 {
    width: 100%;
    margin-bottom: 32px;
  }
}

@media (max-width:47.9375em) {
  .c5 {
    -webkit-align-self: start;
    -ms-flex-item-align: start;
    align-self: start;
    grid-column: main;
    grid-row: menu;
    margin-top: 32px;
  }
}

@media (max-width:47.9375em) {
  .c1 {
    grid-column: main;
    grid-row: logo;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    grid-column: main;
    grid-row: logout;
    max-width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c12 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c8 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <i
    className="c2 c3 fa fa-bars fa-lg"
    id="collapseIcon"
    onClick={[Function]}
  />
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <a
        className="c6 c7"
        href="/"
        onClick={[Function]}
      >
        Dashboard
      </a>
      <a
        className="c6 c7 c8"
        href="/settings/user_settings"
        onClick={[Function]}
      >
        Settings
      </a>
    </div>
    <button
      className="c9 c10 c11"
      id="logoutButton"
      onClick={[Function]}
    >
      Logout
    </button>
    <a
      className="c6 c12 fas fa-cog fa-lg"
      href="/settings/user_settings"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`navbar toggles collapsed 1`] = `
.c9 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c9:hover {
  opacity: 0.90;
}

.c9:focus {
  outline: none;
}

.c9:active {
  opacity: 0.80;
}

.c9:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c10 {
  background-color: transparent;
  border: 1px solid;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  opacity: 0.90;
}

.c2 {
  cursor: pointer;
}

.c0 {
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 100px [content] 1fr;
  grid-gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 1;
}

.c4 {
  grid-column: content;
  display: grid;
  grid-template-columns: [menu] 1fr [new-agent] 250px [logout] 100px [settings] 50px;
  grid-gap: 12px;
  height: auto;
}

.c3 {
  grid-row: logo;
  grid-column: toggle;
  display: none;
  position: relative;
  width: 32px;
  height: 32px;
  line-height: 32px;
  text-align: center;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  -webkit-transition: -webkit-transform .3s ease-out;
  -webkit-transition: transform .3s ease-out;
  transition: transform .3s ease-out;
}

.c3:hover {
  cursor: pointer;
}

.c7 {
  margin: 0px 16px;
  float: left;
}

.c5 {
  grid-column: menu;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  grid-column: logo;
}

.c11 {
  grid-column: logout;
  float: right;
  max-width: 100px;
}

.c12 {
  grid-column: settings;
  line-height: 50px;
  margin: 0 auto;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.c12:hover {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
  cursor: pointer;
}

.c8 {
  display: none;
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {
  .c0 {
    grid-template-columns: [main] 1fr [toggle] 24px;
    grid-template-rows: [logo] 50px [content] 1fr;
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {
  .c4 {
    display: grid;
    grid-column: main / -1;
    grid-row: content;
    height: 100%;
    grid-template-columns: [main] 1fr;
    grid-template-rows: [menu] 1fr [new-agent] 50px [logout] 50px;
  }
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {
  .c3 {
    display: inline;
  }
}

@media (max-width:47.9375em) {
  .c7 {
    width: 100%;
    margin-bottom: 32px;
  }
}

@media (max-width:47.9375em) {
  .c5 {
    -webkit-align-self: start;
    -ms-flex-item-align: start;
    align-self: start;
    grid-column: main;
    grid-row: menu;
    margin-top: 32px;
  }
}

@media (max-width:47.9375em) {
  .c1 {
    grid-column: main;
    grid-row: logo;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    grid-column: main;
    grid-row: logout;
    max-width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c12 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c8 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <i
    className="c2 c3 fas fa-times fa-lg"
    id="collapseIcon"
    onClick={[Function]}
  />
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <a
        className="c6 c7"
        href="/"
        onClick={[Function]}
      >
        Dashboard
      </a>
      <a
        className="c6 c7 c8"
        href="/settings/user_settings"
        onClick={[Function]}
      >
        Settings
      </a>
    </div>
    <button
      className="c9 c10 c11"
      id="logoutButton"
      onClick={[Function]}
    >
      Logout
    </button>
    <a
      className="c6 c12 fas fa-cog fa-lg"
      href="/settings/user_settings"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`navbar toggles collapsed 2`] = `
.c9 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c9:hover {
  opacity: 0.90;
}

.c9:focus {
  outline: none;
}

.c9:active {
  opacity: 0.80;
}

.c9:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c10 {
  background-color: transparent;
  border: 1px solid;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  opacity: 0.90;
}

.c2 {
  cursor: pointer;
}

.c0 {
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 100px [content] 1fr;
  grid-gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 1;
}

.c4 {
  grid-column: content;
  display: grid;
  grid-template-columns: [menu] 1fr [new-agent] 250px [logout] 100px [settings] 50px;
  grid-gap: 12px;
  height: auto;
}

.c3 {
  grid-row: logo;
  grid-column: toggle;
  display: none;
  position: relative;
  width: 32px;
  height: 32px;
  line-height: 32px;
  text-align: center;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform .3s ease-out;
  -webkit-transition: transform .3s ease-out;
  transition: transform .3s ease-out;
}

.c3:hover {
  cursor: pointer;
}

.c7 {
  margin: 0px 16px;
  float: left;
}

.c5 {
  grid-column: menu;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  grid-column: logo;
}

.c11 {
  grid-column: logout;
  float: right;
  max-width: 100px;
}

.c12 {
  grid-column: settings;
  line-height: 50px;
  margin: 0 auto;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.c12:hover {
  -webkit-transform: rotate(95deg);
  -ms-transform: rotate(95deg);
  transform: rotate(95deg);
  cursor: pointer;
}

.c8 {
  display: none;
}

@media (max-width:47.9375em) {
  .c0 {
    grid-template-columns: [main] 1fr [toggle] 24px;
    grid-template-rows: [logo] 50px [content] 1fr;
    position: static;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: auto;
  }
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {
  .c4 {
    display: none;
    grid-column: main / -1;
    grid-row: content;
    height: 100%;
    grid-template-columns: [main] 1fr;
    grid-template-rows: [menu] 1fr [new-agent] 50px [logout] 50px;
  }
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {
  .c3 {
    display: inline;
  }
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {
  .c7 {
    width: 100%;
    margin-bottom: 32px;
  }
}

@media (max-width:47.9375em) {
  .c5 {
    -webkit-align-self: start;
    -ms-flex-item-align: start;
    align-self: start;
    grid-column: main;
    grid-row: menu;
    margin-top: 32px;
  }
}

@media (max-width:47.9375em) {
  .c1 {
    grid-column: main;
    grid-row: logo;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    grid-column: main;
    grid-row: logout;
    max-width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c12 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c8 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <i
    className="c2 c3 fa fa-bars fa-lg"
    id="collapseIcon"
    onClick={[Function]}
  />
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <a
        className="c6 c7"
        href="/"
        onClick={[Function]}
      >
        Dashboard
      </a>
      <a
        className="c6 c7 c8"
        href="/settings/user_settings"
        onClick={[Function]}
      >
        Settings
      </a>
    </div>
    <button
      className="c9 c10 c11"
      id="logoutButton"
      onClick={[Function]}
    >
      Logout
    </button>
    <a
      className="c6 c12 fas fa-cog fa-lg"
      href="/settings/user_settings"
      onClick={[Function]}
    />
  </div>
</div>
`;
